# qtmock_homescreen

./: CMakeLists.txt  application.cpp  application.h  applicationbar.cpp  applicationbar.h  applicationmodel.cpp  applicationmodel.h  appmanagerappmodel.cpp  appmanagerappmodel.h  appmanageruicontrol.cpp  appuicontrol.cpp  appuicontrol.h  eventdata.cpp  eventdata.h  iappmanagerappmodel.xml  iappuicontrol.h  iappuicontrolreceiver.cpp  iappuicontrolreceiver.h  icomponent.cpp  icomponent.h  iuibar.cpp  iuibar.h  iwidget.h  main.cpp  main.qml  mediaplayercontrol.cpp  mediaplayercontrol.h  mediawidget.cpp  mediawidget.h  qml.qrc  widgetbar.cpp  widgetbar.h
